# CreateReport

./: README.md  get_excel_info.py  pyproject.toml  test.py  test2.py  不动产.doc  不动产.docx
common/: enum_class.py
static/upload_zip/22/: 信息表.xlsx
template/: 不动产测量报告.docx
